--- a/templates/bg/bg_base.html
+++ b/templates/bg/bg_base.html
@@ -25,25 +25,36 @@
 
 <body>
 
-    <nav class="Navbar">
+    <nav>
         <div class="topnav" id="myTopnav">
-            <a href="/{{language}}/home" class="active">Начална Страница</a>
-            <a href="">Документи</a>
-            <div class="flags">
+            <a href="/en/home"><button class="active">Homepage</button></a>
+            <a href=""> <button class="document">Documents</button></a>
+            <div>
+                <a href=""></a>
                 <a href="?lang=en"> <img src="{{url_for('static', filename='images/us.png')}}"> </a>
                 <a href="?lang=de"> <img src="{{url_for('static', filename='images/de.png')}}"> </a>
                 <a href="?lang=bg"> <img src="{{url_for('static', filename='images/bg.png')}}"> </a>
                 <a href="?lang=fr"> <img src="{{url_for('static', filename='images/fr.png')}}"> </a>
             </div>
-            <a href="/{{language}}/about_us">За нас</a>
-            <a href="">Изход</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+
+            <div>
+                <a href=""></a>
+                <a href="/{{language}}/about"><button class="about_and_logout">About us</button></a>
+                <a href=""><button class="about_and_logout">Logout</button></a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            </div>
         </div>
     </nav>
+
+    <script type="text/javascript" src="{{url_for('static', filename='javascript/navbar.js')}}"></script>
 
     <!-- Elements from body-->
     <!-- Example: <h1> Website </h1> -->
     {% block body %} {% endblock %}
+    <footer>
+        <a href="/{{language}}/privacy_policy">privacy policy</a>
+        <a href="/{{language}}/legal_notice">legal notice</a>
+    </footer>
 </body>
 
 </html>
