--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -6,6 +6,7 @@
 <title>GEZ</title>
 {% endblock %}
 {% block body %}
+<script type="text/javascript" src="{{url_for('static', filename='javascript/register.js')}}"></script>
 <form action="/{{language}}/register" method="POST">
     <h1>Register</h1>
     <ul>
@@ -16,10 +17,10 @@
         </li>
         <li>
             <label for="">Password</label>
-            <input type="password" name="" id="" required>
+            <input type="password" name="" id="password1" minlength="6" required>
             <span>Choose your password</span>
             <br>
-            <input type="password" name="" id="" minlength="6" required>
+            <input type="password" name="" id="password2" required>
             <span>Repeat your password please</span>
         </li>
         <li>
@@ -52,16 +53,15 @@
         </li>
         <li>
             <label for="">Language</label>
-            <input type="radio" name="language" id="en" value="en"> English
+            <input type="radio" name="language" id="en" value="en" required> English
             <input type="radio" name="language" id="de" value="de"> German
             <input type="radio" name="language" id="bg" value="bg"> Bulgarian
             <input type="radio" name="language" id="fr" value="fr"> French
             <span>Choose the language you'd like to use</span>
         </li>
         <li>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" onclick="checkPasswordValidity()">
         </li>
     </ul>
 </form>
-
 {% endblock %}
