--- a/templates/en/general_information/general_information2.html
+++ b/templates/en/general_information/general_information2.html
@@ -15,6 +15,7 @@
             </summary> 
                 <p>Enter your first name here please.
                     <br> You can find it on your ID Card </p>
+                    <i>You can write down multiple first names, incase you have more than one. You can not write any numbers, nor any special signs except a minus (-)</i>
             </details></span>
         </li>
         <li>
@@ -26,6 +27,7 @@
                 <p>Enter your last name here please 
                     <br> Also known as your family name. You can find it on your ID Card.
                 </p>
+                <i>You can write down multiple last names, incase you have more than one. You can not write any numbers, nor any special signs except a minus (-)</i>
             </details></span>
         </li>
         <li>
