--- a/templates/en/sepa/sepa3.html
+++ b/templates/en/sepa/sepa3.html
@@ -14,7 +14,9 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the ZIP-code of your adress here please. It should be the same just as the address you wrote down earlier.
+                </summary>Enter the ZIP-code of your adress here please. It should be the same just as the address you wrote down earlier.<br>
+                <i>A ZIP in germany has 5 letters!</i><br>
+                 For example 67812, 62342
             </details> </span>
         </li>
         <li>
@@ -23,7 +25,9 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the City of your home here please. It should be the same just as the address you wrote down earlier.
+                </summary>Enter the City of your home here please. It should be the same just as the address you wrote down earlier.<br>
+                            <i>You can not write any numbers, nor any special signs except a minus (-)</i><br>
+                            For example: Johntown, Getinsburg.
                 </details> </span>
         </li>
         <li>
