--- a/templates/en/sepa/sepa4.html
+++ b/templates/en/sepa/sepa4.html
@@ -16,7 +16,8 @@
                     Help?
                 </summary>Enter the IBAN of your bank account here please. It is also known as your bank identification code. <br>
                 It is a connection from the country you live in, your bank code and your account number.<br>
-                For example: <i>DE02120300000000202051     </i>
+                <i>You have to write two uppercase letters and 20 letters afterwards.</i><br>
+                For example: DE02120300000000202051     
             </details> </span>
         </li>
         <li>
@@ -26,7 +27,8 @@
                 <summary>
                     Help?
                 </summary>Enter the BIC of your bank account here please. It is also known as your Bank Identifier Code.<br>
-                For example: <i>BYLADEM1001</i>	
+                <i>You have to write at least 7 and and most 8 uppercase letters and at most 4 numbers.</i><br>
+                For example: BYLADEM1001	
             </details></span>
         </li>
         <li>
@@ -35,8 +37,9 @@
             <span><details>
                 <summary>
                     Help?
-                </summary>Enter the name of your credit institution here please.
-                For example: <i>DEUTSCHE KREDITBANK BERLIN </i>
+                </summary>Enter the name of your credit institution here please.<br>
+                <i>You have to start with a letter, and you can not write any numbers</i><br>
+                For example: DEUTSCHE KREDITBANK BERLIN 
             </details></span>
         </li>
         <li>
