--- a/templates/en/adress/adress2.html
+++ b/templates/en/adress/adress2.html
@@ -6,7 +6,7 @@
 {% block body %}
 <div class="pers-fields">
     <form action="/{{language}}/gez/adress2" method="POST">
-        <h1> Adress 2 of 5</h1>
+        <h1> Address 2 of 5</h1>
         <ul>
             <li>
     <label for="street">Street:</label>
@@ -14,7 +14,7 @@
     <span class="extra-info"> <details><summary>
         Help?
     </summary> 
-        <p>Please enter the name of the Street you are living in. For example: Examplestreet, Longstreet
+        <p>Please enter the name of the Street you are living in. <br>For example: Examplestreet, Longstreet
         </p>
     </details>
         
@@ -26,7 +26,7 @@
     <span class="extra-info"><details><summary>
         Help?
     </summary> 
-        <p>Please enter the number of your flat, on the given street.For Example 2, 4a, 254
+        <p>Please enter the number of your flat, on the given street.<br>For Example 2, 4a, 254
         </p>
     </details>
         
