--- a/templates/en/sepa/sepa1.html
+++ b/templates/en/sepa/sepa1.html
@@ -15,7 +15,9 @@
             <summary>
                 Help?
             </summary>Enter your full name in the following order: title, last name, first name<br> For example: Dr. Mustermann Max
-        <br> If this bank account is not yours, please write down the name of this accounts owner.</span>
+        <br> If this bank account is not yours, please write down the name of this accounts owner.<br>
+        <i>You can not write any numbers, nor any special signs except a minus (-)</i>
+        </span>
         </details>
         </li>
         
