--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -60,7 +60,7 @@
             <span>Choose the language you'd like to use</span>
         </li>
         <li>
-            <input type="submit" value="Submit" onclick="checkPasswordValidity()">
+            <input type="submit" value="Submit" onclick=checkPasswordValidity()>
         </li>
     </ul>
 </form>
