--- a/templates/bg/register.html
+++ b/templates/bg/register.html
@@ -5,6 +5,7 @@
 <title>Адресна регистрация</title>
 {% endblock %}
 {% block body %}
+<script type="text/javascript" src="{{url_for('static', filename='javascript/register.js')}}"></script>
 <form action="/{{language}}/register" method="POST">
     <h1>Регистрация</h1>
     <ul>
@@ -15,10 +16,10 @@
         </li>
         <li>
             <label for="">Парола</label>
-            <input type="password" name="" id="" required>
+            <input type="password" name="" id="password1" required>
             <span>Изберете Вашата парола</span>
             <br>
-            <input type="password" name="" id="" required>
+            <input type="password" name="" id="password2" required>
             <span>Повторете Вашата парола, моля</span>
         </li>
         <li>
@@ -58,7 +59,7 @@
             <span>Изберете езика, който искате да използвате</span>
         </li>
         <li>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Senden" onclick='checkPasswordValidity()'>
         </li>
     </ul>
 </form>
