--- a/templates/fr/register.html
+++ b/templates/fr/register.html
@@ -6,7 +6,8 @@
 <title>GEZ</title>
 {% endblock %}
 {% block body %}
-<form action="/register" method="POST">
+<script type="text/javascript" src="{{url_for('static', filename='javascript/register.js')}}"></script>
+<form action="/{{language}}/register" method="POST">
     <h1>S'inscrire</h1>
     <ul>
         <li>
@@ -16,10 +17,10 @@
         </li>
         <li>
             <label for="">Mot de passe</label>
-            <input type="password" name="" id="" required>
+            <input type="password" name="" id="password1" required>
             <span>Choisissez votre mot de passe</span>
             <br>
-            <input type="password" name="" id="" required>
+            <input type="password" name="" id="password2" required>
             <span>Répétez votre mot de passe s'il vous plaît</span>
         </li>
         <li>
@@ -59,7 +60,7 @@
             <span>Choisissez la langue que vous souhaitez utiliser</span>
         </li>
         <li>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" onclick=checkPasswordValidity()>
         </li>
     </ul>
 </form>
