--- a/templates/bg/bg_base.html
+++ b/templates/bg/bg_base.html
@@ -27,7 +27,7 @@
 
     <nav>
         <div class="topnav" id="myTopnav">
-            <a href="/en/home"><button class="active">Homepage</button></a>
+            <a href="/bg/home"><button class="active">Homepage</button></a>
             <a href=""> <button class="document">Documents</button></a>
             <div>
                 <a href=""></a>
@@ -39,7 +39,7 @@
 
             <div>
                 <a href=""></a>
-                <a href="/{{language}}/about"><button class="about_and_logout">About us</button></a>
+                <a href="/{{language}}/about_us"><button class="about_and_logout">About us</button></a>
                 <a href=""><button class="about_and_logout">Logout</button></a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
