--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -23,7 +23,7 @@
     най-новите технологии
     току-що научени в сътрудничество с нашия професор, както и <b id="welfare"> социален факултет </b>от нашия
     университет за създаване на този уебсайт /апликация/.<br>
-    Ако искате да научите повече <b>За нас </b>, можете да намерите необходимата информация <a href = "/en/about_us"> тук</a>.
+    Ако искате да научите повече <b>За нас </b>, можете да намерите необходимата информация <a href = "/{{language}}/about_us"> тук</a>.
 </p>
 
 <p>
@@ -66,7 +66,7 @@
                         Ако не искате да създавате акаунт, можете да кликнете тук!
                     </h2>
                     <br>
-                    <a href= "/bg/home"> С какво можем да Ви помогнем?</a>
+                    <a href= "/{{language}}/home"> С какво можем да Ви помогнем?</a>
                 </li>
             </ul>
         
@@ -83,7 +83,7 @@
     <p>
         Ние използваме бисквитки в този уебсайт, за да Ви предоставим възможно най-доброто изживяване
         и ще Ви показва подходящи реклами. За да научите повече, прочетете нашия
-        <a href="/bg/privacy_policy">политика за поверителност</a>.
+        <a href="/{{language}}/privacy_policy">политика за поверителност</a>.
     </p>
 
     <button class="cookie-btn">
