--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -55,7 +55,7 @@
         
             <ul>
                 <li>
-                    <a href="/register">
+                    <a href="/{{language}}/register">
                         <p id="reg">S'inscrire</p>
                     </a>
                     
@@ -67,7 +67,7 @@
                         Si vous ne souhaitez pas créer de compte, vous pouvez cliquer ici!
                     </h2>
                     <br>
-                    <a href= "home.html"> Où pouvons-nous vous aider?</a>
+                    <a href= "/{{language}}/home"> Où pouvons-nous vous aider?</a>
                 </li>
             </ul>
         
@@ -84,7 +84,7 @@
     <p>
         Nous utilisons des cookies sur ce site Web pour vous offrir la meilleure expérience possible
         et vous montrer des publicités pertinentes. Pour en savoir plus, lisez notre
-        <a href="templates/localized_pages/English/privacy_policy.html">politique de confidentialité</a>.
+        <a href="/{{language}}/privacy_policy">politique de confidentialité</a>.
     </p>
 
     <button class="cookie-btn">
