--- a/templates/fr/fr_base.html
+++ b/templates/fr/fr_base.html
@@ -27,7 +27,7 @@
 
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
-            <a href="/en/home" class="active">Domicile</a>
+            <a href="/{{language}}/home" class="active">Domicile</a>
             <a href="">Des documents</a>
             <div class="flags">
                 <a href="?lang=en"> <img src="{{url_for('static', filename='images/us.png')}}"> </a>
@@ -35,7 +35,7 @@
                 <a href="?lang=bg"> <img src="{{url_for('static', filename='images/bg.png')}}"> </a>
                 <a href="?lang=fr"> <img src="{{url_for('static', filename='images/fr.png')}}"> </a>
             </div>
-            <a href="/en/about">À propos</a>
+            <a href="/{{language}}/about_us">À propos</a>
             <a href="">Se déconnecter</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
