--- a/templates/fr/home.html
+++ b/templates/fr/home.html
@@ -13,7 +13,7 @@
                 <a href="">Inscription de l'appartement</a>
         </li>
         <li>
-                <a href="/en/gez/general_information"> GEZ</a>
+                <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
         </li>
         <li>
                 <a href="">Garde d'enfants</a>
