--- a/templates/de/adress/adress4.html
+++ b/templates/de/adress/adress4.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
                 <label for="zip_code">PLZ:</label>
-                <input type="number" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
+                <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
