--- a/templates/en/sepa/sepa3.html
+++ b/templates/en/sepa/sepa3.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="ZIP_code">ZIP:</label>
-            <input type="number" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$"  required>
+            <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$"  required>
             <span><details>
                 <summary>
                     Help?
