--- a/templates/bg/adress/adress4.html
+++ b/templates/bg/adress/adress4.html
@@ -9,7 +9,7 @@
         <h1> Адрес 4 от 5</h1>
         <ul> <li>
             <label for="zip_code">Пощенски код:</label>
-            <input type="number" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
+            <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
             <span class="extra-info"><details><summary>Помощ?
 
             </summary>
