--- a/templates/fr/adress/adress4.html
+++ b/templates/fr/adress/adress4.html
@@ -9,7 +9,7 @@
         <h1> Adresse 4 sur 5</h1>
         <ul> <li>
             <label for="zip_code">Code postal:</label>
-            <input type="number" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
+            <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
