--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -10,7 +10,7 @@
 <hr>
 <h2> Моля, не забравяйте, че все още се нуждаем от Вашия подпис и датата като потвърждение! Тук трябва да влезете! <details>
     <summary>Изглежда по този начин!</summary>
-    <img src="url_for('static', filename='images/Part_3.png')" class="image">
+    <img src="url_for('static', filename='images/Part_3_fr.png')" class="image">
     </details>
     <br> </h2>
     
