--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -6,76 +6,82 @@
 
 {% block body %}
 
-<h1>
-    Добре дошли!
-</h1>
-<p>Добре дошли в нашия уебсайт! </p>
-<p >
-    Нашият екип A-5 е тук, за да ви предостави възможно най-добрата помощ, която можете да получите, за да попълните всички документи, с които 
-    са Ви нужни за по-лесен живот в Германия!
-    Ние работим върху превода на всяка необходима информация за Вас, като същевременно обясняваме в лесни за изпълнение стъпки как да попълните
-    всеки документ, за който бихте могли да имате въпроси.
-</p>
-<br>
+<form id="welcometext">
+    <h1>
+        Добре дошли!
+    </h1>
+    <p>Добре дошли в нашия уебсайт! </p>
+    <p>
+        Нашият екип A-5 е тук, за да ви предостави възможно най-добрата помощ, която можете да получите, за да попълните
+        всички документи, с които
+        са Ви нужни за по-лесен живот в Германия!
+        Ние работим върху превода на всяка необходима информация за Вас, като същевременно обясняваме в лесни за
+        изпълнение стъпки как да попълните
+        всеки документ, за който бихте могли да имате въпроси.
+    </p>
+    <br>
 
-<p >
-    Екипът ни се състои от 6 студенти, всички през третия семестър, от Университет Манхайм в Германия. Ние използваме
-    най-новите технологии
-    току-що научени в сътрудничество с нашия професор, както и <b id="welfare"> социален факултет </b>от нашия
-    университет за създаване на този уебсайт /апликация/.<br>
-    Ако искате да научите повече <b>За нас </b>, можете да намерите необходимата информация <a href = "/{{language}}/about_us"> тук</a>.
-</p>
-
+    <p>
+        Екипът ни се състои от 6 студенти, всички през третия семестър, от Университет Манхайм в Германия. Ние
+        използваме
+        най-новите технологии
+        току-що научени в сътрудничество с нашия професор, както и <b id="welfare"> социален факултет </b>от нашия
+        университет за създаване на този уебсайт /апликация/.<br>
+        Ако искате да научите повече <b>За нас </b>, можете да намерите необходимата информация <a
+            href="/{{language}}/about_us"> тук</a>.
+    </p>
+</form>
 <p>
-       
-        <form action="/" method="POST">
-            <h1>Вход</h1>
+
+<form action="/" method="POST">
+    <h1>Вход</h1>
+    <ul>
+        <li>
+            <label for="uName">Потребителско име</label>
+            <input type="text" name="username" id="uName">
+            <span>Напишете потребителското Ви име тук</span>
+        </li>
+        <li>
+            <label for="pWord">Парола</label>
+            <input type="password" name="password" id="pWord">
+            <span>Напишете паролата Ви тук</span>
+        </li>
+        <li>
             <ul>
                 <li>
-                    <label for="uName">Потребителско име</label>
-                    <input type="text" name="username" id="uName">
-                    <span>Напишете потребителското Ви име тук</span>
-                </li>
-                <li>
-                    <label for="pWord">Парола</label>
-                    <input type="password" name="password" id="pWord">
-                    <span>Напишете паролата Ви тук</span>
-                </li>
-                <li>
-                    <ul>
-                        <li>
-                            <input type="submit" value="Submit">
-                            <input type="button" value="Use as a Guest">
-                        </li>
-                    </ul>
-                    
+                    <input type="submit" value="Submit">
+                    <input type="button" value="Use as a Guest">
                 </li>
             </ul>
-        
-            <ul>
-                <li>
-                    <a href="/{{language}}/register">
-                        <p id="reg">Регистрация</p>
-                    </a>
-                    
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <h2>
-                        Ако не искате да създавате акаунт, можете да кликнете тук!
-                    </h2>
-                    <br>
-                    <a href= "/{{language}}/home"> С какво можем да Ви помогнем?</a>
-                </li>
-            </ul>
-        
-        </form>
+
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <a href="/{{language}}/register">
+                <p id="reg">Регистрация</p>
+            </a>
+
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <h2>
+                Ако не искате да създавате акаунт, можете да кликнете тук!
+            </h2>
+            <br>
+            <a href="/{{language}}/home"> С какво можем да Ви помогнем?</a>
+        </li>
+    </ul>
+
+</form>
 </p>
 
 
 <p id="finalsentence">
-    <br>Всеки член на нашия екип се надява, че този сайт ще Ви даде помощта, от която се нуждаете по пътя си през Германия
+    <br>Всеки член на нашия екип се надява, че този сайт ще Ви даде помощта, от която се нуждаете по пътя си през
+    Германия
     бюрокрация. Всички ви желаем приятно прекарване в Германия!
 </p>
 <!-- Cookie html code from here: -->
