--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -7,6 +7,7 @@
 
 {% block body %}
 
+<form id="welcometext">
 <h1>
     Bienvenue!
 </h1>
@@ -26,7 +27,7 @@
     école pour créer ce site /app/.<br>
     Si vous voulez en savoir plus <b>à propos de nous </b>, vous pouvez trouver toutes les informations nécessaires <a href = "en/about_us.html"> here</a>.
 </p>
-
+</form>
 <p>
        
         <form action="/" method="POST">
