--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -9,7 +9,7 @@
 <br>
 <h1> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
     <summary>This is how it looks like!</summary>
-    <img src="{{url_for('static', filename='images/Part_3.png')}}" class="image">
+    <img src="{{url_for('static', filename='images/Part_3_en.png')}}" class="image">
     </details>
     <br> </h1>
     
