--- a/templates/fr/final.html
+++ b/templates/fr/final.html
@@ -10,7 +10,7 @@
 <hr>
 <h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
     <summary>This is how it looks like!</summary>
-    <img src="{{url_for('static', filename='images/Part_3.png')}}" class="image">
+    <img src="{{url_for('static', filename='images/Part_3_fr.png')}}" class="image">
     </details>
     <br> </h2>
     
