bilder für die unterschrift bearbeitet

--- a/templates/de/_final.html
+++ b/templates/de/_final.html
@@ -12,7 +12,10 @@
     <summary>Hier müssen Sie unterschreiben!</summary>
     <img src="{{url_for('static', filename='images/Part_3.png')}}" class="image">
     </details>
-    <br> </h2>
+    <br>Falls Sie die Gebühren über eine SEPA Lastschrift versenden, müssen Sie an noch einer Stelle unterschreiben! 
+    <details><summary>Hier müssen Sie unterschreiben!</summary>
+        <img src="{{url_for('static', filename='images/Part_5.png')}}" class="image">
+    </details></h2>
     
 <p>Wenn Ihnen irgendwas unklar geblieben ist, oder Sie weitere Fragen haben, kontaktieren Sie bitte eine Beratungsstelle wie die ANIMA unter <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
