--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -6,12 +6,17 @@
 <title> Welcome </title>
 {% endblock %}
 {% block body %}
-<br>
-<h1> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
+<h1>Welcome</h1>
+<hr>
+<h2> Please remember that we still need your signature and the date as validation! This is where you have to sign in! <details>
     <summary>This is how it looks like!</summary>
     <img src="{{url_for('static', filename='images/Part_3.png')}}" class="image">
     </details>
-    <br> </h1>
+    <br>  In case you have decided to send the money with a SEPA mandate you have to give another signature!
+            <details><summary>This is how it looks like!</summary>
+                <img src="{{url_for('static', filename='images/Part_5.png')}}" class="image">
+            </details>
+</h2>
     
 <p>If you need any kind of additional help, please do not hesitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
