--- a/templates/fr/final.html
+++ b/templates/fr/final.html
@@ -12,7 +12,10 @@
     <summary>This is how it looks like!</summary>
     <img src="{{url_for('static', filename='images/Part_3.png')}}" class="image">
     </details>
-    <br> </h2>
+    <br> In case you have decided to send the money with a SEPA mandate you have to give another signature!
+    <details><summary>This is how it looks like!</summary>
+        <img src="{{url_for('static', filename='images/Part_5.png')}}" class="image">
+    </details></h2>
     
 <p>If you need any kind of additional help, please do not hestitate to reach out the helpline <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
