--- a/templates/en/final.html
+++ b/templates/en/final.html
@@ -14,7 +14,7 @@
     </details>
     <br>  In case you have decided to send the money with a SEPA mandate you have to give another signature!
             <details><summary>This is how it looks like!</summary>
-                <img src="{{url_for('static', filename='images/Part_5.png')}}" class="image">
+                <img src="{{url_for('static', filename='images/Part_5_en.png')}}" class="image">
             </details>
 </h2>
     
