--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -12,7 +12,10 @@
     <summary>Изглежда по този начин!</summary>
     <img src="url_for('static', filename='images/Part_3_fr.png')" class="image">
     </details>
-    <br> </h2>
+    <br> В случай, че сте взели решението да преведете пари чрез SEPA, трябва да се подпишете отново!
+    <details><summary>Изглежда ето така!</summary>
+        <img src="{{url_for('static', filename='images/Part_5_fr.png')}}" class="image">
+    </details></h2>
     
 <p>Ако се нуждаете от някаква допълнителна помощ, моля, не се колебайте да се свържете с линията за помощ. <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
