--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -10,11 +10,11 @@
 <hr>
 <h2> Моля, не забравяйте, че все още се нуждаем от Вашия подпис и датата като потвърждение! Тук трябва да влезете! <details>
     <summary>Изглежда по този начин!</summary>
-    <img src="url_for('static', filename='images/Part_3_fr.png')" class="image">
+    <img src="url_for('static', filename='images/Part_3_bg.png')" class="image">
     </details>
     <br> В случай, че сте взели решението да преведете пари чрез SEPA, трябва да се подпишете отново!
     <details><summary>Изглежда ето така!</summary>
-        <img src="{{url_for('static', filename='images/Part_5_fr.png')}}" class="image">
+        <img src="{{url_for('static', filename='images/Part_5_bg.png')}}" class="image">
     </details></h2>
     
 <p>Ако се нуждаете от някаква допълнителна помощ, моля, не се колебайте да се свържете с линията за помощ. <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
