--- a/templates/de/gez_explanation.html
+++ b/templates/de/gez_explanation.html
@@ -12,6 +12,7 @@
 <p>Desweiterem müssen Sie mindestens 18 Jahre alt sein, um Rundfunkgebühr zu bezahlen.</p>
 <p>Nach der Einreichung des Formulars müssen Sie die Gebühren regelmäßig bezahlen.</p>
 <p>Auch wenn es nervig sein kann, müssen Sie glücklicherweise dieses Formular nur einmal versenden, solange Sie nicht Ihren Wohnsitz ändern. In diesem Falle müssen Sie das dem Staat melden.</p>
+<p>Mit diesen Geldern werden die öffentlich rechtlichen Medien unterstützt. Diese Medien sind unabhängig gegenüber privat Unternehmen die die Reichweite der öffentlich Rechtlichen manipulieren wollen für ihre eigene Zwecke.</p>
 <h3>Wir teilen das Dokument in mehrere Untergruppen, wodurch das ausfüllen leichter wird:</h3>
 <ul>
     <li>Zuerst benötigen wir Ihre allgemeine Daten, wie zum Beispiel Ihren Namen oder Ihren Geburtstag</li>
