--- a/templates/bg/gez_explanation.html
+++ b/templates/bg/gez_explanation.html
@@ -12,6 +12,9 @@
     <h2>Поискахте помощ за gez-документ.</h2>
     <p>Такса радио е таксата за излъчване тук, в Германия. Всеки апартамент трябва да го плати, така че няма как да
         избягате от него, ако искате да живеете в Германия.</p>
+    <p>Също така трябва да знаете, че трябва да сте пълнолетни, за да платите тази такса. </p>
+    <p>След изпращането на документа трябва да го плащате редовно.</p>
+        
     <p>Въпреки че може да е досадно да плащате, трябва да попълните документа само веднъж, стига да живеете в настоящия
         си апартамент.</p>
     <h3>Разделяме документа на множество малки части.</h3>
