--- a/templates/en/gez_explanation.html
+++ b/templates/en/gez_explanation.html
@@ -7,7 +7,7 @@
 <form action="/{{language}}/gez/gez_explanation" method='POST'>
 <h1>Welcome to our GEZ-help!</h1>
 <h2>You requested some help for a gez-document.</h2>
-<p>GEZ is the broadcast fee here in germany. Every apartment has to pay it, so there is no escape from it, if you want to live in germany.Thankfully you only have to pay it once per apartment</p>
+<p>GEZ is the broadcast fee here in Germany. Every apartment has to pay it, so there is no escape from it, if you want to live in germany.Thankfully you only have to pay it once per apartment</p>
 <p>Moreover you have to be 18 years old to pay GEZ. </p>
 <p>After you sent the fullfilled document you have to pay the fee regurlary.</p>
 <p>While it can be annoying to pay, you only have to fill out the document once, as long as you live in your current apartment.</p>
