welcome auf deutsch

--- a/templates/de/_welcome.html
+++ b/templates/de/_welcome.html
@@ -11,11 +11,9 @@
     Willkomen!
 </h1>
 <p>Willkomen zu unserer Website! </p>
-<p >
-    Our Team A-5 is here to provide you with the best possible help you can get to fill out all the documents you have
-    to finish for a save and easy life in germany!
-    We work on translating any necessary information for you, whilest explaining in easy to follow steps how to fill
-    every document you could have questions for.
+<p >Wir sind Team A-5 und wir sind hier um Ihnen bei der Ausfüllung Ihrer Dokumente auszuhelfen, damit Sie 
+    ein sorgenloses Leben in Deutschlangd haben!
+    Wir arbeiten daran jegliche notwendige Information für Sie zu übersetzen, als auch jeglichen Schritt genauestens zu erklären.
 </p>
 <br>
 
